--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -3,19 +3,16 @@
 }
 .table {
   @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
+    th,
+    td {
+      @apply py-2 px-3 lg:py-4 lg:px-6;
+    }
   thead {
     @apply text-xs text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
-    th {
-      @apply py-3 px-6;
-    }
   }
   tbody {
     th {
       @apply font-medium text-gray-900 whitespace-nowrap dark:text-white;
-    }
-    th,
-    td {
-      @apply py-4 px-6;
     }
     tr {
       @apply bg-white border-b dark:bg-gray-900 dark:border-gray-700;
