--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -1,5 +1,5 @@
 .table__wrapper {
-  @apply overflow-x-auto relative shadow-md sm:rounded-lg;
+  @apply overflow-x-auto relative shadow-md rounded-md sm:rounded-lg;
 }
 .table {
   @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
