--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-full my-3 table__wrapper">
+<div class="deck-tab-item table__wrapper">
   <div class="table-caption-title">
     <div class="flex flex-wrap items-center -mt-3">
       <span class="mt-3 mr-12">カードリスト</span>
