--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -139,3 +139,19 @@
     @apply text-blue-600 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:bg-gray-700 dark:text-white;
   }
 }
+
+.tab-group-wrapper {
+  @apply text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:text-gray-400 dark:border-gray-700;
+}
+.tab-group {
+  @apply flex flex-wrap -mb-px space-x-2;
+}
+.tab {
+  @apply block cursor-pointer select-none p-4 rounded-t-lg border-b-2 border-transparent;
+}
+.tab:not(.active) {
+  @apply hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300;
+}
+.tab.active {
+  @apply text-blue-600  border-blue-600 dark:text-blue-500 dark:border-blue-500;
+}
