--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -5,7 +5,7 @@
   @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
     th,
     td {
-      @apply py-2 px-3 lg:py-4 lg:px-6;
+      @apply py-2 px-3;
     }
   thead {
     @apply text-xs text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
@@ -116,6 +116,9 @@
 }
 .button-primary {
   @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
+}
+.button-danger {
+  @apply text-white bg-red-700 hover:bg-red-800 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900
 }
 .button-alt {
   @apply text-gray-500 bg-white hover:bg-gray-100 focus:ring-blue-300 border border-gray-200 hover:text-gray-900 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600;
