見た目の調整

--- a/src/styles/custom-components.pcss
+++ b/src/styles/custom-components.pcss
@@ -163,7 +163,7 @@
       @apply flex flex-wrap gap-4 py-2;
     }
     tr {
-      @apply inline-grid drop-shadow-md shadow-black hover:bg-gray-100 dark:hover:bg-gray-600 dark:shadow-white grid-cols-8 w-44 row-auto gap-1 border-2 rounded-lg p-1 after:content-none;
+      @apply inline-grid drop-shadow-md shadow-black dark:shadow-white grid-cols-8 w-44 row-auto gap-1 border-2 rounded-lg p-1 after:content-none;
     }
     td {
       @apply block border-none px-1 py-0;
