--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -96,7 +96,7 @@
   @apply p-4 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700;
 }
 .card__title {
-  @apply mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white;
+  @apply mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white;
 }
 .card__body {
   @apply font-normal text-gray-700 dark:text-gray-400;
