formのレイアウト調整

--- a/src/template/views/deckLoadConf.html
+++ b/src/template/views/deckLoadConf.html
@@ -1,8 +1,8 @@
-<div class="flex items-end">
+<div>
   <div>
     編集中のデータがありますが、
   </div>
-  <div class="mr-2">
+  <div class="mx-2 my-3">
     <div>{{t}}</div>
     <div class="text-xs">編集: <span>{{d}}</span></div>
   </div>
