--- a/src/template/views/saveDeckDialogBody.html
+++ b/src/template/views/saveDeckDialogBody.html
@@ -18,7 +18,7 @@
     >
   </label>
   {{#decks.length}}
-  <div class="mt-3 mb-2 form-label">上書き</div>
+  <div class="mt-3 form-label">上書き</div>
   <div class="ml-1 overflow-y-auto max-h-36">
     {{#decks}}
     <label class="flex items-center p-1">
