--- a/src/template/deck/deckRow.html
+++ b/src/template/deck/deckRow.html
@@ -4,11 +4,14 @@
     <div class="text-xs">編集: <span class="edit-date">{{d}}</span></div>
   </td>
   <td class="space-x-1">
-    <button type="button" data-action="edit" class="button button-xs button-primary">
-      <i class="fa-solid fa-pen-to-square"></i>
+    <button type="button" title="デッキを読み込む" data-action="edit" class="button button-xs button-primary">
+      <i class="fa-solid fa-folder-open"></i>
     </button>
-    <button type="button" data-action="delete" class="button button-xs button-danger">
+    <button type="button" title="デッキを削除する" data-action="delete" class="button button-xs button-danger">
       <i class="fa fa-trash-can"></i>
+    </button>
+    <button type="button" title="共有リンクを作成" data-action="share" class="button button-xs button-default">
+      <i class="fa-solid fa-share-from-square"></i>
     </button>
   </td>
 </tr>
