--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -41,7 +41,7 @@
   }
 }
 .table-caption-title {
-  @apply p-5 text-lg font-semibold text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800;
+  @apply p-4 text-base font-semibold text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800;
 }
 .table-caption {
   @apply mt-1 text-sm font-normal text-gray-500 dark:text-gray-400;
