--- a/src/template/views/saveDeck.html
+++ b/src/template/views/saveDeck.html
@@ -1,4 +1,8 @@
-<button type="button" title="デッキを保存" class="self-center mt-3 button button-primary button-sm">
+<button
+  type="button"
+  title="デッキを保存"
+  class="self-center mt-3 ml-3 button button-primary button-xs"
+>
   <i class="fa-solid fa-floppy-disk"></i>
-  <span class="ml-2">保存</span>
+  <span class="hidden ml-2 xl:inline">保存</span>
 </button>
