--- a/src/styles/custom-components.pcss
+++ b/src/styles/custom-components.pcss
@@ -210,7 +210,7 @@
 }
 
 .gridcount {
-  @apply py-1 relative left-1 z-10 text-center after:bg-violet-600 after:border-violet-900 text-white text-base after:-z-10 after:-rotate-45 after:absolute after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:w-6 after:h-6 after:border-2 after:rounded-sm;
+  @apply py-1 relative left-1 z-10 font-normal text-center after:bg-violet-600 after:border-violet-900 text-white text-base after:-z-10 after:-rotate-45 after:absolute after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:w-4 after:h-4 after:border-2 after:rounded-sm;
 }
 
 .deck-tab-items {
