--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -4,27 +4,6 @@
       <span class="mt-3 ml-3 table-title-text">{{title}}</span>
       <div class="flex-auto max-w-[16px]"></div>
       <div class="flex flex-wrap text-sm font-normal action-wrapper">
-        {{#srch}}
-        <form class="flex items-center cardlist_serch search-container">
-          <div
-            class="relative mt-3 ml-3 w-44"
-            data-clearable
-          >
-            <input
-              class="w-full pr-16 form-input input_cardlist_serch"
-              type="search"
-              placeholder="カード名検索"
-            />
-            <button
-              class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
-              type="submit"
-            >
-              <i class="fa fa-search"></i>
-            </button>
-            <i class="input-clear right-12 fa fa-circle-xmark"></i>
-          </div>
-        </form>
-        {{/srch}}
         <div class="mt-3 ml-3 w-36">
           <select class="form-input table-sort">
             <option value="0">カードNo(昇順)</option>
@@ -59,6 +38,108 @@
         </div>
       </div>
     </div>
+    {{#srch}}
+    <div class="mt-3 cardlist_serch search-container expandable-wrapper">
+      <form class="expandable !overflow-hidden">
+        <div class="flex mb-3">
+          <div class="flex items-center flex-nowrap" title="マス数">
+            <div class="p-3 mt-2 mr-5 text-xs gridcount">
+              <div
+                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-4 whitespace-nowrap"
+              >
+                マス数
+              </div>
+            </div>
+            <div class="w-12">
+              <label
+                for="min-grid"
+                class="mb-1 text-xs form-label form-label-input"
+                >最小</label
+              >
+              <input
+                id="min-grid"
+                type="number"
+                class="p-1 form-input text-end"
+              />
+            </div>
+            <span class="mx-2 mt-5">～</span>
+            <div class="w-12">
+              <label
+                for="max-grid"
+                class="mb-1 text-xs form-label form-label-input"
+                >最大</label
+              >
+              <input
+                id="max-grid"
+                type="number"
+                class="p-1 form-input text-end"
+              />
+            </div>
+          </div>
+          <div
+            class="flex items-center ml-6 flex-nowrap"
+            title="スペシャルポイント"
+          >
+            <div class="relative !mt-2 p-px cardgrid-cell sp-fill">
+              <div
+                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-5 whitespace-nowrap"
+              >
+                sp
+              </div>
+            </div>
+            <div class="w-12 ml-3">
+              <label
+                for="min-sp"
+                class="mb-1 text-xs form-label form-label-input"
+                >最小</label
+              >
+              <input
+                id="min-sp"
+                type="number"
+                class="p-1 form-input text-end"
+              />
+            </div>
+            <span class="mx-2 mt-5">～</span>
+            <div class="w-12">
+              <label
+                for="max-sp"
+                class="mb-1 text-xs form-label form-label-input"
+                >最大</label
+              >
+              <input
+                id="max-sp"
+                type="number"
+                class="p-1 form-input text-end"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="relative mb-3 ml-3" data-clearable>
+          <input
+            class="w-full pr-16 form-input input_cardlist_serch"
+            type="search"
+            placeholder="カード名検索"
+          />
+          <button
+            class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
+            type="submit"
+          >
+            <i class="fa fa-search"></i>
+          </button>
+          <i class="input-clear right-12 fa fa-circle-xmark"></i>
+        </div>
+      </form>
+      <div class="mt-1 -mx-4 -mb-4">
+        <button
+          type="button"
+          class="block w-full text-center button-default expand-button"
+        >
+          <span class="mr-2 text-sm">詳細検索</span
+          ><i class="fa-solid fa-caret-down"></i>
+        </button>
+      </div>
+    </div>
+    {{/srch}}
   </div>
   <div
     class="relative flex-shrink-0 flex-grow h-[calc(100vh-300px)] overflow-y-scroll"
