文言の調整

--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -118,7 +118,7 @@
           <input
             class="w-full pr-16 form-input input_cardlist_serch"
             type="search"
-            placeholder="カード名検索"
+            placeholder="カード名"
           />
           <button
             class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
