--- a/src/styles/custom-components.pcss
+++ b/src/styles/custom-components.pcss
@@ -75,6 +75,9 @@
       @apply text-blue-800 dark:text-blue-300;
     }
   }
+  [data-selected="1"] {
+    @apply bg-blue-100 dark:bg-blue-600 dark:bg-opacity-20;
+  }
   &[data-layout="table"] {
     .grid__wrapper {
       @apply hidden absolute z-10;
@@ -109,10 +112,14 @@
     thead {
       @apply sticky top-0 z-10;
     }
-    tbody tr:hover {
-      td,
-      th {
+    tr:hover {
+      td {
         @apply bg-gray-100 dark:bg-gray-600;
+      }
+    }
+    [data-selected="1"]:hover {
+      td {
+        @apply bg-blue-200 dark:bg-blue-700 dark:bg-opacity-30;
       }
     }
     .card_no > * {
@@ -146,7 +153,7 @@
       @apply flex flex-wrap gap-3 py-2;
     }
     tr {
-      @apply inline-grid drop-shadow-md shadow-black dark:shadow-white grid-cols-8 w-40 row-auto gap-1 border-2 rounded-lg p-1 after:content-none;
+      @apply inline-grid drop-shadow-md shadow-black dark:shadow-white grid-cols-8 w-40 row-auto gap-1 border-2 rounded-lg p-1;
     }
     td {
       @apply block border-none px-1 py-0;
