--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -5,7 +5,7 @@
   @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
     th,
     td {
-      @apply py-2 px-3;
+      @apply p-2;
     }
   thead {
     @apply text-xs text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
@@ -41,7 +41,7 @@
   }
 }
 .table-caption-title {
-  @apply p-4 text-base font-semibold text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800;
+  @apply p-2 md:p-4 text-sm lg:text-base font-semibold text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800;
 }
 .table-caption {
   @apply mt-1 text-sm font-normal text-gray-500 dark:text-gray-400;
