--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -1,10 +1,10 @@
 <div class="deck-tab-item table__wrapper">
   <div class="table-caption-title">
-    <div class="flex flex-wrap items-center -mt-3 -ml-3">
-      <span class="mt-3 ml-3 table-title-text">{{title}}</span>
+    <div class="flex flex-wrap items-center -mt-2 -ml-2">
+      <span class="table-title-text">{{title}}</span>
       <div class="flex-auto max-w-[16px]"></div>
       <div class="flex flex-wrap text-sm font-normal action-wrapper">
-        <div class="mt-3 ml-3 w-36">
+        <div class="mt-2 ml-2 w-36">
           <select class="form-input table-sort">
             <option value="0">カードNo(昇順)</option>
             <option value="1">カードNo(降順)</option>
@@ -151,18 +151,20 @@
           <th class="w-0 !p-0">
             <!-- マス表示 -->
           </th>
-          <th class="w-20 text-center xl:w-28">
+          <th class="w-16 text-center xl:w-28">
             <span class="xl:hidden">No.</span
             ><span class="hidden xl:inline">ナンバー</span>
           </th>
-          <th class="w-16 text-center">マス数</th>
-          <th class="w-20 text-center xl:w-28">
+          <th class="text-center w-14 md:w-16">マス数</th>
+          <th class="w-16 text-center md:w-24">
             <span class="xl:hidden">SP</span
             ><span class="hidden xl:inline">スペシャル<br />ポイント</span>
           </th>
-          <th class="w-20 !px-2 text-center lg:w-26">レア度</th>
+          <th class="w-1 text-center sm:w-20 md:w-1 lg:w-20">
+            <span class="hidden sm:inline md:hidden lg:inline">レア度</span>
+          </th>
           <th class="text-start">名前</th>
-          <th class="w-16"></th>
+          <th class="w-14"></th>
         </tr>
       </thead>
       <tbody></tbody>
