--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -129,7 +129,7 @@
           <i class="input-clear right-12 fa fa-circle-xmark"></i>
         </div>
       </form>
-      <div class="mt-1 -mx-4 -mb-4">
+      <div class="mt-1 -mx-2 -mb-2 md:-mx-4 md:-mb-4">
         <button
           type="button"
           class="block w-full text-center button-default expand-button"
