--- a/src/template/dialog/dialog.html
+++ b/src/template/dialog/dialog.html
@@ -1,27 +1,26 @@
 <div
   tabindex="-1"
   aria-hidden="true"
-  class="fixed inset-0 z-50 transition-opacity bg-gray-900 bg-opacity-50 pointer-events-auto dark:bg-opacity-80"
+  class="absolute inset-0 z-50 overflow-y-auto transition-opacity bg-gray-900 bg-opacity-50 pointer-events-auto dark:bg-opacity-80"
 >
-  <div
-    tabindex="-1"
-    aria-hidden="true"
-    class="fixed top-0 left-0 right-0 z-50 flex items-center justify-center w-full overflow-x-hidden overflow-y-auto modal md:inset-0 md:h-full"
-  >
-    <div class="relative w-full h-full max-w-2xl p-4 md:h-auto">
+  <div tabindex="-1" aria-hidden="true" class="flex flex-col h-full">
+    <div class="flex-shrink basis-1/5"></div>
+    <div class="p-4">
       <div
-        class="relative transition-transform duration-200 bg-white rounded-lg shadow modal-content dark:bg-gray-700"
+        class="max-w-2xl mx-auto transition-transform duration-200 bg-white rounded-lg shadow modal-content dark:bg-gray-700"
       >
         <!-- header -->
         <div
-          class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600"
+          class="flex items-start justify-between p-3 border-b rounded-t lg:p-4 dark:border-gray-600"
         >
-          <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+          <h3
+            class="text-base font-semibold text-gray-900 lg:text-xl dark:text-white"
+          >
             {{ title }}
           </h3>
           <button
             type="button"
-            class="modal-close text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-base text-center w-8 h-8 p-1.5 ml-auto inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white"
+            class="inline-flex items-center justify-center ml-auto text-sm text-center text-gray-400 bg-transparent rounded-lg w-7 h-7 modal-close hover:bg-gray-200 hover:text-gray-900 lg:text-base lg:w-8 lg:h-8 dark:hover:bg-gray-600 dark:hover:text-white"
             data-modal-toggle="defaultModal"
           >
             <i aria-hidden="true" class="fa fa-xmark"></i>
@@ -31,7 +30,7 @@
         <!-- /header -->
         <!-- body -->
         <div
-          class="p-6 space-y-6 text-base leading-relaxed text-gray-500 dark:text-gray-400"
+          class="p-4 overflow-y-auto text-sm leading-relaxed text-gray-500 lg:text-base lg:p-6 dark:text-gray-400"
         >
           {{ body }} {{{ bodyHTML }}}
         </div>
@@ -39,10 +38,13 @@
         <!-- footer -->
         {{#buttons.length}}
         <div
-          class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
+          class="flex items-center p-4 space-x-2 border-t border-gray-200 rounded-b lg:p-6 dark:border-gray-600"
         >
           {{#buttons}}
-          <button type="button" class="button modal-action {{buttonClass}}">
+          <button
+            type="button"
+            class="button px-3 py-2 rounded-md lg:px-5 lg:py-2.5 lg:rounded-lg modal-action {{buttonClass}}"
+          >
             {{#icon}}
             <i class="mr-2 {{.}}"></i>
             {{/icon}} {{label}}
@@ -53,5 +55,6 @@
         <!-- /footer -->
       </div>
     </div>
+    <div class="flex-shrink basis-3/5"></div>
   </div>
 </div>
