--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     {{#srch}}
-    <div class="mt-3 cardlist_serch search-container expandable-wrapper">
+    <div class="mt-2 md:mt-3 cardlist_serch search-container expandable-wrapper">
       <form class="expandable !overflow-hidden">
         <div class="flex mb-3">
           <div class="flex items-center flex-nowrap" title="マス数">
