--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -3,10 +3,10 @@
 }
 .table {
   @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
-    th,
-    td {
-      @apply p-2;
-    }
+  th,
+  td {
+    @apply p-2;
+  }
   thead {
     @apply text-xs text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
   }
@@ -93,7 +93,7 @@
   }
 }
 .card {
-  @apply p-4 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700;
+  @apply p-4 bg-white rounded-md sm:rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700;
 }
 .card__title {
   @apply mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white;
@@ -114,7 +114,7 @@
   @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
 }
 .button-danger {
-  @apply text-white bg-red-700 hover:bg-red-800 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900
+  @apply text-white bg-red-700 hover:bg-red-800 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900;
 }
 .button-alt {
   @apply text-gray-500 bg-white hover:bg-gray-100 focus:ring-blue-300 border border-gray-200 hover:text-gray-900 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600;
