デッキのボタンの並びを調整

--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -3,7 +3,7 @@
     <div class="flex flex-wrap items-center -mt-2 -ml-2">
       <span class="table-title-text">{{title}}</span>
       <div class="flex-auto max-w-[16px]"></div>
-      <div class="flex flex-wrap text-sm font-normal action-wrapper">
+      <div class="font-normal">
         <div class="mt-2 ml-2 w-36">
           <select class="form-input table-sort">
             <option value="0">カードNo(昇順)</option>
@@ -17,7 +17,10 @@
           </select>
         </div>
       </div>
-      <div class="flex justify-end flex-auto ml-3">
+      <div class="flex flex-wrap action-wrapper">
+
+      </div>
+      <div class="flex justify-end flex-auto ml-1">
         <div class="mt-3 button-toggle" role="group">
           <button
             type="button"
