--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -17,9 +17,7 @@
           </select>
         </div>
       </div>
-      <div class="flex flex-wrap action-wrapper">
-
-      </div>
+      <div class="flex action-wrapper"></div>
       <div class="flex justify-end flex-auto ml-1">
         <div class="mt-3 button-toggle" role="group">
           <button
