--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -2,7 +2,7 @@
   <div class="table-caption-title">
     <div class="flex flex-wrap items-center -mt-2 -ml-2">
       <span class="table-title-text">{{title}}</span>
-      <div class="flex-auto max-w-[16px]"></div>
+      <div class="flex-auto" style="max-width: 16px"></div>
       <div class="font-normal">
         <div class="mt-2 ml-2 w-36">
           <select class="form-input table-sort">
@@ -153,8 +153,8 @@
     {{/srch}}
   </div>
   <div
-    class="relative flex-shrink-0 flex-grow h-[calc(100vh-300px)] overflow-y-scroll"
-    style="min-height: 400px"
+    class="relative flex-grow flex-shrink-0 overflow-y-scroll"
+    style="min-height: 400px; height: calc(100vh - 250px)"
     tabindex="-1"
   >
     <table class="table cardlist_table" data-layout="grid">
