デッキIDを保存する

--- a/src/template/deck/deckRow.html
+++ b/src/template/deck/deckRow.html
@@ -1,11 +1,11 @@
-<tr data-c="{{c}}">
+<tr data-c="{{c}}" data-id="{{id}}">
   <td>
     <div class="deck-name">{{t}}</div>
     <div class="text-xs">編集: <span class="edit-date">{{d}}</span></div>
   </td>
   <td class="space-x-1">
-    <button type="button" title="デッキを読み込む" data-action="edit" class="button button-xs button-primary">
-      <i class="fa-solid fa-folder-open"></i>
+    <button type="button" title="デッキを編集する" data-action="edit" class="button button-xs button-primary">
+      <i class="fa-solid fa-pen-to-square"></i>
     </button>
     <button type="button" title="デッキを削除する" data-action="delete" class="button button-xs button-danger">
       <i class="fa fa-trash-can"></i>
