--- a/src/template/views/saveDeckDialogBody.html
+++ b/src/template/views/saveDeckDialogBody.html
@@ -28,6 +28,7 @@
         class="form-radio deck-radio-item peer"
         value="{{idx}}"
         data-name="{{t}}"
+        data-id="{{id}}"
       />
       <div
         class="form-label form-label-radio peer-checked:text-blue-600 dark:peer-checked:text-blue-500"
