デッキURLの説明を追加

--- a/src/template/deckShare/shareBody.html
+++ b/src/template/deckShare/shareBody.html
@@ -1,4 +1,7 @@
 <div>
+  <div class="mb-4 text-xs">
+    デッキURLをブラウザで開くと、デッキの内容がデッキ編集画面に読み込まれます。
+  </div>
   <div>
     <label class="form-label form-label-input">デッキコード</label>
     <div class="relative">
