--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -19,6 +19,13 @@
       </div>
       <div class="flex action-wrapper"></div>
       <div class="flex justify-end flex-auto ml-1">
+        {{^srch}}
+        <div class="mt-3 mr-3" title="デッキ情報">
+          <button type="button" id="button-deck-info" class="button button-sm button-default">
+            <i class="w-3 fa-solid fa-info"></i>
+          </button>
+        </div>
+        {{/srch}}
         <div class="mt-3 button-toggle" role="group">
           <button
             type="button"
