--- a/src/styles/custom-components.pcss
+++ b/src/styles/custom-components.pcss
@@ -75,141 +75,135 @@
   [data-selected="1"] {
     @apply bg-blue-100 dark:bg-blue-600 dark:bg-opacity-20;
   }
-  &[data-layout="table"] {
-    .grid__wrapper {
-      @apply hidden absolute z-10;
-    }
-    .card_grid {
-      @apply relative;
-    }
-    tr {
-      &:hover,
-      &:active {
-        .grid__wrapper {
-          @apply block absolute -bottom-8 left-8 w-max p-1 bg-gray-600 dark:bg-gray-800;
-        }
+}
+[data-layout="table"] {
+  .grid__wrapper {
+    @apply hidden absolute z-10;
+  }
+  .card_grid {
+    @apply relative;
+  }
+  tr {
+    &:hover,
+    &:active {
+      .grid__wrapper {
+        @apply block absolute -bottom-8 left-8 w-max p-1 bg-gray-600 dark:bg-gray-800;
       }
-    }
-    tr:first-child {
-      &:hover,
-      &:active {
-        .grid__wrapper {
-          @apply -top-6 bottom-auto;
-        }
-      }
-    }
-    tr:last-child {
-      &:hover,
-      &:active {
-        .grid__wrapper {
-          @apply bottom-0 top-auto;
-        }
-      }
-    }
-    thead {
-      @apply sticky top-0 z-10;
-    }
-    tr:hover {
-      td {
-        @apply bg-gray-100 dark:bg-gray-600;
-      }
-    }
-    [data-selected="1"]:hover {
-      td {
-        @apply bg-blue-200 dark:bg-blue-700 dark:bg-opacity-30;
-      }
-    }
-    .card_no > * {
-      @apply justify-between;
-    }
-    .card_sp {
-      @apply text-center;
-    }
-    .card_name {
-      @apply text-start;
-    }
-    .card_gridcount {
-      @apply text-end;
-    }
-    .card_rarity {
-      @apply text-center px-0 text-xs;
-    }
-    .rarity_label {
-      @apply h-4;
-      & > * {
-        @apply hidden sm:inline md:hidden lg:inline;
-      }
-    }
-    .card_action {
-      @apply text-center;
     }
   }
-  &[data-layout="grid"] {
-    @apply block;
-    caption {
-      @apply block;
+  tr:first-child {
+    .grid__wrapper {
+      @apply -top-6 bottom-auto;
     }
-    thead {
-      @apply hidden;
+  }
+  tr:last-child {
+    .grid__wrapper {
+      @apply bottom-0 top-auto;
     }
-    tbody {
-      @apply flex flex-wrap gap-3 py-2;
-    }
-    tr {
-      @apply inline-grid drop-shadow-md shadow-black dark:shadow-white grid-cols-8 w-40 row-auto border-2 rounded-lg p-1;
-    }
+  }
+  thead {
+    @apply sticky top-0 z-10;
+  }
+  tr:hover {
     td {
-      @apply block border-none px-1 py-0;
+      @apply bg-gray-100 dark:bg-gray-600;
     }
-    .card_no {
-      @apply order-first col-span-4 pr-0;
-      .value::before {
-        content: "No.";
-        @apply mr-px;
-      }
+  }
+  [data-selected="1"]:hover {
+    td {
+      @apply bg-blue-200 dark:bg-blue-700 dark:bg-opacity-30;
     }
-    .card_rarity {
-      @apply -order-12 col-span-4 p-0 text-xs place-self-end;
+  }
+  .card_no > * {
+    @apply justify-between;
+  }
+  .card_sp {
+    @apply text-center;
+  }
+  .card_name {
+    @apply text-start;
+  }
+  .card_gridcount {
+    @apply text-end;
+  }
+  .card_rarity {
+    @apply text-center px-0 text-xs;
+  }
+  .rarity_label {
+    @apply h-4;
+    & > * {
+      @apply hidden sm:inline md:hidden lg:inline;
     }
-    .rarity_label {
-      @apply px-1;
+  }
+  .card_action {
+    @apply text-center;
+  }
+}
+[data-layout="grid"] {
+  @apply block;
+  caption {
+    @apply block;
+  }
+  thead {
+    @apply hidden;
+  }
+  tbody {
+    @apply flex flex-wrap gap-3 py-2;
+  }
+  tr {
+    @apply inline-grid drop-shadow-md shadow-black dark:shadow-white grid-cols-8 w-40 row-auto border-2 rounded-lg p-1;
+  }
+  td {
+    @apply block border-none px-1 py-0;
+  }
+  .card_no {
+    @apply order-first col-span-4 pr-0;
+    .value::before {
+      content: "No.";
+      @apply mr-px;
     }
-    [data-card_rarity="0"] {
-      @apply border-gray-600;
-      .card_gridcount {
-        @apply after:bg-violet-600 after:border-violet-900;
-      }
-    }
-    [data-card_rarity="1"] {
-      @apply border-amber-500;
-      .card_gridcount {
-        @apply after:bg-gradient-to-b after:from-yellow-500 after:via-amber-700   after:to-yellow-700 after:border-amber-900;
-      }
-    }
-    [data-card_rarity="2"] {
-      @apply border-purple-600;
-      .card_gridcount {
-        @apply after:bg-gradient-to-b after:from-pink-400 after:via-blue-600 after:to-cyan-400 after:border-blue-800;
-      }
-    }
-    .card_name {
-      @apply -order-10 flex justify-center whitespace-nowrap col-span-full font-bold text-sm pb-1 -mx-2;
-      * {
-        @apply scale-100;
-      }
-    }
-    .card_grid {
-      @apply -order-9 col-span-full place-self-center;
-    }
+  }
+  .card_rarity {
+    @apply -order-12 col-span-4 p-0 text-xs place-self-end;
+  }
+  .rarity_label {
+    @apply px-1;
+  }
+  [data-card_rarity="0"] {
+    @apply border-gray-600;
     .card_gridcount {
-      @apply -order-5 p-0 w-9 h-9 flex items-center justify-center col-span-2 relative z-10 text-center text-white text-base after:-z-10 after:-rotate-45 after:absolute after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:w-6 after:h-6 after:border-2 after:rounded-sm;
+      @apply after:bg-violet-600 after:border-violet-900;
     }
-    .card_sp {
-      @apply -order-3 col-span-3 mt-1 flex items-center;
+  }
+  [data-card_rarity="1"] {
+    @apply border-amber-500;
+    .card_gridcount {
+      @apply after:bg-gradient-to-b after:from-yellow-500 after:via-amber-700   after:to-yellow-700 after:border-amber-900;
     }
-    .card_action {
-      @apply flex p-0 col-start-7 justify-start items-center;
+  }
+  [data-card_rarity="2"] {
+    @apply border-purple-600;
+    .card_gridcount {
+      @apply after:bg-gradient-to-b after:from-pink-400 after:via-blue-600 after:to-cyan-400 after:border-blue-800;
     }
+  }
+  .card_name {
+    @apply -order-10 flex justify-center whitespace-nowrap col-span-full font-bold text-sm pb-1 -mx-2;
+    > * {
+      @apply scale-100;
+    }
+  }
+  .card_grid {
+    @apply -order-9 col-span-full place-self-center;
+  }
+  .card_gridcount {
+    @apply -order-5 p-0 w-9 h-9 flex items-center justify-center col-span-2 relative z-10 text-center text-white text-base after:-z-10 after:-rotate-45 after:absolute after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:w-6 after:h-6 after:border-2 after:rounded-sm;
+  }
+  .card_sp {
+    @apply -order-3 col-span-3 mt-1 flex items-center;
+  }
+  .card_action {
+    @apply flex p-0 col-start-7 justify-start items-center;
   }
 }
 
