--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -21,7 +21,11 @@
       <div class="flex justify-end flex-auto ml-1">
         {{^srch}}
         <div class="mt-3 mr-3" title="デッキ情報">
-          <button type="button" id="button-deck-info" class="button button-sm button-default">
+          <button
+            type="button"
+            id="button-deck-info"
+            class="button button-sm button-default"
+          >
             <i class="w-3 fa-solid fa-info"></i>
           </button>
         </div>
@@ -51,8 +55,8 @@
       <form
         class="expandable cardlist_serch !overflow-hidden flex flex-wrap items-end"
       >
-        <div class="flex mx-3 mb-3">
-          <div class="flex items-center flex-nowrap" title="マス数">
+        <div class="flex flex-wrap mb-3 -ml-3">
+          <div class="flex items-center ml-6" title="マス数">
             <div class="p-3 mt-2 mr-5 text-xs gridcount">
               <div
                 class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-4 whitespace-nowrap"
@@ -86,11 +90,8 @@
               />
             </div>
           </div>
-          <div
-            class="flex items-center ml-6 flex-nowrap"
-            title="スペシャルポイント"
-          >
-            <div class="relative !mt-2 p-px cardgrid-cell sp-fill">
+          <div class="flex items-center mt-2 ml-6" title="スペシャルポイント">
+            <div class="relative !mt-2 !mx-2 p-px cardgrid-cell sp-fill">
               <div
                 class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-5 whitespace-nowrap"
               >
