--- a/src/template/cardList/row.html
+++ b/src/template/cardList/row.html
@@ -18,7 +18,7 @@
   </td>
   <td class="card_gridcount" title="マス数">{{gridCount}}</td>
   <td class="card_sp" title="スペシャルポイント">
-    <div class="inline-block cardgrid-cell sp-fill"></div>
+    <div class="inline-block sp-fill"></div>
     <i class="mx-1 fa fa-xmark"></i><span>{{sp}}</span>
   </td>
   <td class="card_rarity" title="レア度">
