--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="flex items-center mt-2 ml-6" title="スペシャルポイント">
-            <div class="relative !mt-2 !mx-2 p-px cardgrid-cell sp-fill">
+            <div class="relative p-px mx-2 mt-2 sp-fill">
               <div
                 class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-5 whitespace-nowrap"
               >
