--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -2,7 +2,20 @@
   <div class="table-caption-title">
     <div class="flex flex-wrap items-center -mt-2 -ml-2">
       <span class="table-title-text">{{title}}</span>
+      {{^srch}}
+      <div class="mx-3 mt-3" title="デッキ情報">
+        <button
+          type="button"
+          id="button-deck-info"
+          class="button button-sm button-default"
+        >
+          <i class="w-3 fa fa-circle-info"></i>
+        </button>
+      </div>
+      {{/srch}}
+      {{#srch}}
       <div class="flex-auto" style="max-width: 16px"></div>
+      {{/srch}}
       <div class="font-normal">
         <div class="mt-2 ml-2 w-36">
           <select class="form-input table-sort">
@@ -19,17 +32,7 @@
       </div>
       <div class="flex action-wrapper"></div>
       <div class="flex justify-end flex-auto ml-1">
-        {{^srch}}
-        <div class="mt-3 mr-3" title="デッキ情報">
-          <button
-            type="button"
-            id="button-deck-info"
-            class="button button-sm button-default"
-          >
-            <i class="w-3 fa-solid fa-info"></i>
-          </button>
-        </div>
-        {{/srch}}
+
         <div class="mt-3 button-toggle" role="group">
           <button
             type="button"
