--- a/src/template/cardList/table.html
+++ b/src/template/cardList/table.html
@@ -59,7 +59,7 @@
         class="expandable cardlist_serch !overflow-hidden flex flex-wrap items-end"
       >
         <div class="flex flex-wrap mb-3 -ml-3">
-          <div class="flex items-center ml-6" title="マス数">
+          <div class="flex items-center mt-2 ml-6" title="マス数">
             <div class="p-3 mt-2 mr-5 text-xs gridcount">
               <div
                 class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-4 whitespace-nowrap"
