レイアウトの微修正

--- a/src/template/views/saveDeck.html
+++ b/src/template/views/saveDeck.html
@@ -1,7 +1,7 @@
 <button
   type="button"
   title="デッキを保存"
-  class="self-center mt-3 ml-3 button button-primary button-xs"
+  class="self-center mt-2 ml-3 button button-primary button-sm"
 >
   <i class="fa-solid fa-floppy-disk"></i>
   <span class="hidden ml-2 xl:inline">保存</span>
