--- a/src/template/views/clearBtn.html
+++ b/src/template/views/clearBtn.html
@@ -1,7 +1,7 @@
 <button
   type="button"
   title="デッキを空にする"
-  class="self-center mt-3 ml-1 button button-xs button-danger"
+  class="self-center mt-2 ml-1 button button-sm button-danger"
 >
   <i class="fa-solid fa-ban"></i>
 </button>
