文言とレイアウトを微調整

--- a/src/template/views/info.html
+++ b/src/template/views/info.html
@@ -4,7 +4,7 @@
       このサイトは、スプラトゥーン３のナワバトラーのデッキ構築の補助を目的として作成しました。
     </li>
     <li>
-      デッキはブラウザ上に保存できる他、コードを発行して共有することができます。
+      作成したデッキはブラウザ上に保存できる他、コードを発行してSNSなどで共有することができます。
     </li>
     <li>
       不具合がありましたら、お手数ですが開発のTwitterまでご連絡いただけますと幸いです。
