カード選択時の見た目が反映されるように修正

--- a/src/styles/custom-components.pcss
+++ b/src/styles/custom-components.pcss
@@ -59,7 +59,7 @@
   }
 }
 [data-selected="1"] {
-  @apply bg-blue-100 dark:bg-blue-600 dark:bg-opacity-20;
+  @apply !bg-blue-100 dark:!bg-blue-600 dark:!bg-opacity-20;
 }
 [data-layout="table"] {
   .grid__wrapper {
