--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -20,7 +20,7 @@
   }
 }
 .table-caption-title {
-  @apply p-2 md:p-4 text-sm lg:text-base font-semibold text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800;
+  @apply p-2 md:p-4 text-sm lg:text-base font-medium text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800;
 }
 .form-label {
   @apply text-sm font-medium text-gray-900 dark:text-gray-300;
