--- a/src/template/dialog/dialog.template.html
+++ b/src/template/dialog/dialog.template.html
@@ -14,7 +14,7 @@
           class="flex items-start justify-between p-3 border-b rounded-t lg:p-4 dark:border-gray-600"
         >
           <h3
-            class="text-base font-semibold text-gray-900 lg:text-xl dark:text-white"
+            class="text-base font-medium text-gray-900 lg:text-xl dark:text-white"
           >
             {{ title }}
           </h3>
